--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registrarse";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -29,6 +29,10 @@
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Registrar</button>
         </form>
+    </div>
+    <div class="col-md-8 col-md-offset-2">
+        <img src="https://cde.3.elcomercio.pe/ima/0/1/2/8/5/1285231.jpg" alt="" class="img-fluid">
+            
     </div>
     
 </div>
