--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,99 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="slider">
+        <div class="list">
+            <div class="item">
+                <img src="https://scontent.faqp6-1.fna.fbcdn.net/v/t39.30808-6/437558388_122094240716301770_3699734999792724850_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=xeUpfmOogPMAb7zGCmy&_nc_ht=scontent.faqp6-1.fna&oh=00_AfD6LkNnezJXadIixLuQxCRpGf6SuCs2jz7kLGXDw8-SaQ&oe=662FB092" alt="">
+            </div>
+            <div class="item">
+                <img src="https://scontent.faqp6-1.fna.fbcdn.net/v/t39.30808-6/438888197_122094244856301770_2209856584246056775_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_ohc=kptWbc22ow0Ab6woVyG&_nc_ht=scontent.faqp6-1.fna&oh=00_AfAR5oU35JRncm5xN5n2KIjzh-txhjFCaLS7u0vNsJr3-w&oe=662FB9EB" alt="">
+            </div>
+            <div class="item">
+                <img src="https://scontent.faqp6-1.fna.fbcdn.net/v/t39.30808-6/438714645_122094257042301770_3200291087612120806_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=R-7pugZpJGwAb56mQX_&_nc_ht=scontent.faqp6-1.fna&oh=00_AfBe0rnD9wZ8G_nFO3xzGuzkwy0GsEG1y7f9wxWbXtMa3A&oe=662FA3C4" alt="">
+            </div>
+            <div class="item">
+                <img src="https://scontent.faqp6-1.fna.fbcdn.net/v/t39.30808-6/438805937_122094257096301770_4809811127179821609_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_ohc=DZtdOZHlvC0Q7kNvgFEpaNA&_nc_ht=scontent.faqp6-1.fna&oh=00_AfDaKBQzYkKZe6u-rqtVQjFZO1eG381--BfGscHsSPxeoQ&oe=662FBE80" alt="">
+            </div>
+            <div class="item">
+                <img src="https://scontent.faqp6-1.fna.fbcdn.net/v/t39.30808-6/438714726_122094257192301770_5207150450104131581_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Q-o650kBK6AQ7kNvgGwJuxz&_nc_ht=scontent.faqp6-1.fna&oh=00_AfBW34LYAOCPB9lv312T-ze1xOa_R_s9Cii0_BfX_aRdeg&oe=662FACD7" alt="">
+            </div>
+        </div>
+        <div class="buttons">
+            <button id="prev"><</button>
+            <button id="next">></button>
+        </div>
+        <ul class="dots">
+            <li class="active"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+
+    <section class="dishes" id="dishes">
+
+        <h3 class="sub-heading"> Solo por hoy </h3>
+        <h1 class="heading"> productos en oferta especial </h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <img src="https://plazavea.vteximg.com.br/arquivos/ids/28725095-300-300/20358135.jpg?v=638429528995130000" alt="">
+                <h3>Cartuchera CLASS&WORK</h3>
+                <p><del>Antes: S/4.90</del></p>
+                <span>Ahora<br>S/2.90<br></span>
+                <a href="#" class="btn">comprar</a>
+            </div>
+
+            <div class="box">
+                <img src="https://plazavea.vteximg.com.br/arquivos/ids/28725113-300-300/20389600.jpg?v=638429530502130000" alt="">
+                <h3>Lonchera CLASS&WORK</h3>
+                <p><del>Antes: S/24.90</del></p>
+                <span>Ahora<br>S/17.90<br></span>
+                <a href="#" class="btn">comprar</a>
+            </div>
+
+            <div class="box">
+                <img src="https://plazavea.vteximg.com.br/arquivos/ids/28892916-300-300/20390298.jpg?v=638482260073730000" alt="">
+                <h3>Adorno Perro Manhatan</h3>
+                <p><del>Antes: S/9.90</del></p>
+                <span>Ahora<br>S/8.90<br></span>
+                <a href="#" class="btn">comprar</a>
+            </div>
+
+            <div class="box">
+                <img src="https://plazavea.vteximg.com.br/arquivos/ids/291889-300-300/941818.jpg?v=637165401077070000" alt="">
+                <h3>plumones Artesco</h3>
+                <p><del>Antes: S/5.90</del></p>
+                <span>Ahora<br>S/3.70<br></span>
+                <a href="#" class="btn">comprar</a>
+            </div>
+
+            <div class="box">
+                <img src="https://plazavea.vteximg.com.br/arquivos/ids/26963693-300-300/20280806.jpg?v=638241409358100000" alt="">
+                <h3>Bloqueador Neutrogena</h3>
+                <p><del>Antes: S/65.90</del></p>
+                <span>Ahora<br>S/56.00<br></span>
+                <a href="#" class="btn">comprar</a>
+            </div>
+
+            <div class="box">
+                <img src="https://plazavea.vteximg.com.br/arquivos/ids/26358764-184-184/20281722.jpg?v=638193906575500000" alt="">
+                <h3>Jabon Dove</h3>
+                <p><del>Antes: S/13.50</del></p>
+                <span>Ahora<br>S/12.50<br></span>
+                <a href="#" class="btn">comprar</a>
+            </div>
+
+       
+
+        </div>
+    
+
+</section>
+
+    <h1 class="display-4"></h1>
+    
 </div>
