--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,27 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+<section class="about" id="about">
+
+    <h1 class="heading"> Nosotros </h1>
+
+    <div class="row">
+
+        <div class="image">
+            <img src="https://assets.eleventa.com/assets/blog/cuanto-pagarle-a-empleado-tienda-abarrotes_2023-08-15-200328_hqsx.webp" alt="">
+        </div>
+
+        <div class="content">
+            <h3>La Facu store</h3>
+            <p>Bienvenido a la Facu store, tu destino de compras online para una amplia variedad de productos que satisfacen todos tus gustos y necesidades. En [Nombre de la Tienda], nos enorgullecemos de ofrecer una experiencia de compra única, donde la diversidad es nuestra principal fortaleza.</p>
+            <p>En la Facu store, estamos comprometidos a ser tu destino de compras preferido, donde la diversidad se celebra y la satisfacción del cliente es nuestra máxima prioridad.
+            <br>¡Gracias por elegirnos para tus necesidades de compras online!</p>
+        </div>
+
+    </div>
+
+</section>
+
