--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Olvidaste tu contraseña?";
 }
 
 <h1>@ViewData["Title"]</h1>
