--- a/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = "restablecer contraseña";
 }
 
 <h1>@ViewData["Title"]</h1>
