--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Catalogo" asp-action="Index">Catalogo</a>
                         </li>
+                        <li class="nav-item">
+                            <form asp-controller="Catalogo" asp-action="Index">
+                                <input type="text" name="searchString"><input type="submit" value="Buscar" />
+                            </form>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
