--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Catalogo" asp-action="Index">Catalogo</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Carrito" asp-action="Index">Carrito</a>
+                        </li>
+                        <li class="nav-item">
                             <form asp-controller="Catalogo" asp-action="Index">
                                 <input type="text" name="searchString"><input type="submit" value="Buscar" />
                             </form>
