--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -20,9 +20,10 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
-                  <p class="card-text">@Html.DisplayFor(modelItem => item.Price)</p>
-                  <a class="btn btn-primary" asp-action="Add" asp-route-id="@item.Id">Add</a>
-                  <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">View</a>
+                  <p style="display: inline-block; margin-right: 5px;">S/.</p>
+                  <p style="display: inline-block; margin-right: 5px;" class="card-text">@Html.DisplayFor(modelItem => item.Price)</p>
+                  <br/> <a class="btn btn-primary" asp-action="Add" asp-route-id="@item.Id">AGREGAR</a>
+                  <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">VER</a>
                 </div>
               </div>
             </div>
