--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,19 +6,19 @@
     <div class="slider">
         <div class="list">
             <div class="item">
-                <img src="https://scontent.faqp6-1.fna.fbcdn.net/v/t39.30808-6/437558388_122094240716301770_3699734999792724850_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=xeUpfmOogPMAb7zGCmy&_nc_ht=scontent.faqp6-1.fna&oh=00_AfD6LkNnezJXadIixLuQxCRpGf6SuCs2jz7kLGXDw8-SaQ&oe=662FB092" alt="">
+                <img src="/images/img1.jpg" alt="">
             </div>
             <div class="item">
-                <img src="https://scontent.faqp6-1.fna.fbcdn.net/v/t39.30808-6/438888197_122094244856301770_2209856584246056775_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_ohc=kptWbc22ow0Ab6woVyG&_nc_ht=scontent.faqp6-1.fna&oh=00_AfAR5oU35JRncm5xN5n2KIjzh-txhjFCaLS7u0vNsJr3-w&oe=662FB9EB" alt="">
+                <img src="/images/img2.jpg" alt="">
             </div>
             <div class="item">
-                <img src="https://scontent.faqp6-1.fna.fbcdn.net/v/t39.30808-6/438714645_122094257042301770_3200291087612120806_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=R-7pugZpJGwAb56mQX_&_nc_ht=scontent.faqp6-1.fna&oh=00_AfBe0rnD9wZ8G_nFO3xzGuzkwy0GsEG1y7f9wxWbXtMa3A&oe=662FA3C4" alt="">
+                <img src="/images/img3.jpg" alt="">
             </div>
             <div class="item">
-                <img src="https://scontent.faqp6-1.fna.fbcdn.net/v/t39.30808-6/438805937_122094257096301770_4809811127179821609_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_ohc=DZtdOZHlvC0Q7kNvgFEpaNA&_nc_ht=scontent.faqp6-1.fna&oh=00_AfDaKBQzYkKZe6u-rqtVQjFZO1eG381--BfGscHsSPxeoQ&oe=662FBE80" alt="">
+                <img src="/images/img4.jpg" alt="">
             </div>
             <div class="item">
-                <img src="https://scontent.faqp6-1.fna.fbcdn.net/v/t39.30808-6/438714726_122094257192301770_5207150450104131581_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Q-o650kBK6AQ7kNvgGwJuxz&_nc_ht=scontent.faqp6-1.fna&oh=00_AfBW34LYAOCPB9lv312T-ze1xOa_R_s9Cii0_BfX_aRdeg&oe=662FACD7" alt="">
+                <img src="/images/img5.jpg" alt="">
             </div>
         </div>
         <div class="buttons">
