--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -3,8 +3,18 @@
 @inject UserManager<IdentityUser> UserManager
 
 <ul class="navbar-nav">
+    <li class="nav-item">
+            <form asp-controller="Catalogo" asp-action="Index">
+                                <input type="text" name="searchString"><input type="submit" value="Buscar" />
+            </form>
+    </li>
 @if (SignInManager.IsSignedIn(User))
 {
+    <li class="nav-item">
+        <form asp-controller="Carrito" asp-action="Index">
+                <input type="submit" value="Carrito" />
+        </form>
+    </li>
     <li class="nav-item">
         <a  class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hola @User.Identity?.Name</a>
     </li>
