--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -20,9 +20,9 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
-                  <p class="card-text">@Html.DisplayFor(modelItem => item.Price)</p>
-                  <a class="btn btn-primary" asp-controller="Carrito" asp-action="Add" asp-route-id="@item.Id">Add</a>
-                  <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">View</a>
+                  <p class="card-text">S/ @Html.DisplayFor(modelItem => item.Price)</p>
+                  <a class="btn btn-primary" asp-controller="Carrito" asp-action="Add" asp-route-id="@item.Id">Añadir al carrito</a>
+                  <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Ver</a>
                 </div>
               </div>
             </div>
