--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<lafacustorev2.Models.Producto>
+@{
+    
+    ViewData["Title"] = "ProductosFiltrados";
 }
 
 <div class="text-center">
@@ -33,6 +35,6 @@
             <li></li>
         </ul>
     </div>
-    <h1 class="display-4"></h1>
-    
+    <h1 class="display-4"></h1>   
 </div>
+
