--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,27 +1,28 @@
 ﻿@{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Nosotros";
 }
 <h1>@ViewData["Title"]</h1>
 
-
 <section class="about" id="about">
+    <h1 class="heading">  </h1>
 
-    <h1 class="heading"> Nosotros </h1>
+    <div class="container">
+        <div class="row align-items-center">
+            <!-- Columna de Contenido -->
+            <div class="col-md-6">
+                <div class="content">
+                    <h3>La Facu store</h3>
+                    <p>Bienvenido a la Facu store, tu destino de compras online para una amplia variedad de productos que satisfacen todos tus gustos y necesidades. En La Facu store, nos enorgullecemos de ofrecer una experiencia de compra única, donde la diversidad es nuestra principal fortaleza.</p>
+                    <p>En La Facu store, estamos comprometidos a ser tu destino de compras preferido, donde la diversidad se celebra y la satisfacción del cliente es nuestra máxima prioridad. <br>¡Gracias por elegirnos para tus necesidades de compras online!</p>
+                </div>
+            </div>
 
-    <div class="row">
-
-        <div class="image">
-            <img src="https://assets.eleventa.com/assets/blog/cuanto-pagarle-a-empleado-tienda-abarrotes_2023-08-15-200328_hqsx.webp" alt="">
+            <!-- Columna de Imagen -->
+            <div class="col-md-6">
+                <div class="image text-center">
+                    <img src="https://assets.eleventa.com/assets/blog/cuanto-pagarle-a-empleado-tienda-abarrotes_2023-08-15-200328_hqsx.webp" alt="Nosotros" class="img-fluid rounded shadow">
+                </div>
+            </div>
         </div>
-
-        <div class="content">
-            <h3>La Facu store</h3>
-            <p>Bienvenido a la Facu store, tu destino de compras online para una amplia variedad de productos que satisfacen todos tus gustos y necesidades. En [Nombre de la Tienda], nos enorgullecemos de ofrecer una experiencia de compra única, donde la diversidad es nuestra principal fortaleza.</p>
-            <p>En la Facu store, estamos comprometidos a ser tu destino de compras preferido, donde la diversidad se celebra y la satisfacción del cliente es nuestra máxima prioridad.
-            <br>¡Gracias por elegirnos para tus necesidades de compras online!</p>
-        </div>
-
     </div>
-
 </section>
-
