--- a/Views/Contacto/Index.cshtml
+++ b/Views/Contacto/Index.cshtml
@@ -1,27 +1,37 @@
 @model lafacustorev2.Models.Contacto
 <h2>Contacto</h2>
 
-@using (Html.BeginForm("EnviarMensaje", "Contacto", FormMethod.Post))
-{
-    <div class="form-group">
-        @Html.LabelFor(model => model.Name)
-        @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.Name)
+<div class="row">
+    <div class="col-md-6 mx-auto">
+        @using (Html.BeginForm("EnviarMensaje", "Contacto", FormMethod.Post))
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.Name)
+                @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Name)
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Email)
+                @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Email)
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Message)
+                @Html.TextAreaFor(model => model.Message, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Message)
+            </div>
+
+            <div class="form-group mb-3"></div>
+
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Enviar</button>
+        }
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Email)
-        @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.Email)
+    <div class="col-md-6 mx-auto">
+        <img src="https://www.servinform.es/wp-content/uploads/2022/03/Beneficios-de-la-atencion-al-cliente-virtual.jpg" alt="" class="img-fluid rounded shadow">
+            
     </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Message)
-        @Html.TextAreaFor(model => model.Message, new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.Message)
-    </div>
-
-    <button type="submit" class="btn btn-primary">Enviar</button>
-}
-
- <h1>@ViewData["Message"]</h1>
+</div>  
+<h1>@ViewData["Message"]</h1>
