--- a/Views/pago/Create.cshtml
+++ b/Views/pago/Create.cshtml
@@ -59,5 +59,22 @@
             </form>
             <h1>@ViewData["Message"]</h1>
           </div>
+
+<div class="col-sm-2">
+            
+        
+<img src="/images/tienda.jpg" class="img-fluid" alt="Imagen" style="border: 2px solid #000; padding: 10px;">
+        
         </div>
+
+ 
+</div>
+
+        </div>
+
+        
+
+
+
+
     </div>
