--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Catalogo" asp-action="Index">Catalogo</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="TipoCambio" asp-action="Index">Tipo Cambio</a>
+                        </li>
                         <partial name="_MenuAdminPartial" />
                     </ul>
                     <partial name="_LoginPartial" />
