--- a/Views/TipoCambio/Index.cshtml
+++ b/Views/TipoCambio/Index.cshtml
@@ -12,7 +12,7 @@
                 <div class="card-body">
                     <form asp-controller="TipoCambio" asp-action="Exchange" method="post">
                         <div class="form-group mb-3">
-                            <label asp-for="From" class="control-label">Desde</label>
+                            <label asp-for="From" class="control-label">De:</label>
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-exchange-alt"></i></span>
@@ -22,7 +22,7 @@
                             <span asp-validation-for="From" class="text-danger"></span>
                         </div>
                         <div class="form-group mb-3">
-                            <label asp-for="To" class="control-label">Hasta</label>
+                            <label asp-for="To" class="control-label">A:</label>
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-exchange-alt"></i></span>
