--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -1,34 +1,50 @@
-@model IEnumerable<lafacustorev2.Models.Producto>
+@model dynamic;
+@using System.Collections.Generic;
+
 @{
-    ViewData["Title"] = "Catalogo";
+    ViewData["Title"] = "Carrito";
+    IEnumerable<lafacustorev2.Models.Proforma> listItemsCarrito = new List<Proforma>();
+    listItemsCarrito = @Model.elementosCarrito;
+    Decimal montoTotal = @Model.montoTotal;
 }
 
 <h1>@ViewData["Title"]</h1>
-  <div class="container">
-    <h1>@ViewData["Message"]</h1>
-    <div class="row">
-      <div class="col">
-        <div id="products" class="mb-3">
-          <div class="row">
-            @foreach (var item in Model) {
-            <div class="col-sm-4">
-              <div class="card mb-3">
-                <div class="card-body">
-                  <div class="card-img-actions">
-                      <img src="@item.ImageURL" class="d-block w-100 image-fit">
-                  </div>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
-                  <p class="card-text">@Html.DisplayFor(modelItem => item.Price)</p>
-                  <a class="btn btn-primary" asp-action="Add" asp-route-id="@item.Id">Add</a>
-                  <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">View</a>
-                </div>
-              </div>
-            </div>
-            }
-         </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
+<a class="btn btn-primary" asp-controller="Pago" 
+        asp-action="Create" asp-route-monto="@montoTotal">Pagar</a><p>Total S/. @montoTotal</p>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => listItemsCarrito.FirstOrDefault().Producto.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => listItemsCarrito.FirstOrDefault().Cantidad)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => listItemsCarrito.FirstOrDefault().Precio)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (Proforma item in Model.elementosCarrito) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Producto.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cantidad)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Precio)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
