--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="TipoCambio" asp-action="Index">Tipo Cambio</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Contacto" asp-action="VerContactos">Ver contactos</a>
+                        </li>
+                       <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Contacto" asp-action="Sentimientos">Ver contactos Sentimiento</a>
+                        </li>    
                         <partial name="_MenuAdminPartial" />
                     </ul>
                     <partial name="_LoginPartial" />
