--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -19,7 +19,7 @@
 
             <!-- Columna de Imagen -->
             <div class="col-md-6">
-                <div class="image text-center">
+                <div class="image text-center" style="border: 1px solid black;">
                     <img src="https://assets.eleventa.com/assets/blog/cuanto-pagarle-a-empleado-tienda-abarrotes_2023-08-15-200328_hqsx.webp" alt="Nosotros" class="img-fluid rounded shadow">
                 </div>
             </div>
