--- a/Views/Catalogo/Details.cshtml
+++ b/Views/Catalogo/Details.cshtml
@@ -4,21 +4,29 @@
     ViewData["Title"] = "Detalles del Producto";
 }
 
-    <h1>Details</h1>
-    <div class="container">
-            <div class="col-sm-4">
-              <div class="card mb-3">
+<h1>Detalles del Producto</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card mb-3">
                 <div class="card-body">
-                  <div class="card-img-actions">
-                    <img class="img-responsive" width="96" height="150"
-                       src="@Html.DisplayFor(model => model.ImageURL)"  />
-                  </div>
+                    <h5 class="card-title">@Html.DisplayFor(model => model.Name)</h5>
+                    <h5 class="card-title">S/ @Html.DisplayFor(model => model.Price)</h5>
+                    <a class="btn btn-primary" asp-controller="Carrito" asp-action="Add" asp-route-id="@Model.Id">Añadir al carrito</a>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">@Html.DisplayFor(model => model.Name)</h5>
-                  <h5 class="card-title">@Html.DisplayFor(model => model.Price)</h5>
-                  <a class="btn btn-primary" asp-controller="Carrito" asp-action="Add" asp-route-id="@Model.Id">Add</a>
-                </div>
-              </div>
             </div>
+        </div>
+        <div class="col-md-6">
+            <img src="@Html.DisplayFor(model => model.ImageURL)" class="img-fluid rounded-start image-large" alt="@Model.Name">
+        </div>
     </div>
+    <a href="@Url.Action("Index", "Catalogo")" class="btn btn-secondary mt-3"><i class="fas fa-arrow-left"></i> Regresar al catálogo</a>
+</div>
+
+<style>
+    .image-large {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+</style>
