--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -37,4 +37,42 @@
     </div>
     <h1 class="display-4"></h1>   
 </div>
-
+<h1 class="text-center">¡Todo lo que deseas, a precios especiales!</h1>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="card">
+                <img src="https://images.falabella.com/v3/assets/bltf4ed0b9a176c126e/bltd5990432115cd1b2/6661c7ab2af24b2803e60be6/novedades-080624-granja.png?disable=upscale&auto=webp&quality=70&width=1280" class="card-img-top" alt="Imagen 1">
+                
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <img src="https://images.falabella.com/v3/assets/bltf4ed0b9a176c126e/blt2e8918fedf432a3d/6661c7ac3dcdf6f0bd2c8a16/novedades-080624-hydroflask.png?disable=upscale&auto=webp&quality=70&width=1280" class="card-img-top" alt="Imagen 2">
+                
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <img src="https://images.falabella.com/v3/assets/bltf4ed0b9a176c126e/blt009b7a7b3c2f4036/6661c7ab491b81275b5033f5/novedades-080624-maternelle.png?disable=upscale&auto=webp&quality=70&width=1280" class="card-img-top" alt="Imagen 3">
+                
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <img src="https://images.falabella.com/v3/assets/bltf4ed0b9a176c126e/bltfb6835d342a6688a/6661c7ababe4396000d15a15/novedades-080624-deco.png?disable=upscale&auto=webp&quality=70&width=1280" class="card-img-top" alt="Imagen 4">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container mt-5">
+    <div class="row">
+        <div class="">
+            <div class="card">
+                <a asp-controller="Catalogo" asp-action="Index" target="_blank">
+                    <img src="/images/home2.jpg" class="card-img-top img-fluid" alt="Imagen 1">
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
