--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header class="custom-header">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  box-shadow mb-3 bg-moradoO custom-navbar">
             <div class="container-fluid">
-                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index"><strong>la facu</strong></a>
+                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/logoo.jpg" alt="la facu" style="height: 40px; margin-right: 10px;"><strong>la facu</strong></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
