--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -8,7 +8,7 @@
 <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-        <img src="https://cdn.foodandwineespanol.com/2021/04/Doritos-restaurante.jpg" alt="" class="img-fluid">
+        <img src="/images/login.jpg" alt="" class="img-fluid">
             
     </div>
 
